--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Monte City - Verificação</title>
 
-    <meta property="og:title" content="🚨 URGENTE: Notícia em Monte Carmelo">
-    <meta property="og:description" content="Acesse para conferir os detalhes da ocorrência no bairro Santa Rita.">
-    <meta property="og:image" content="https://raw.githubusercontent.com/nocitiasmonte/montecity/main/monte%20city.jpg">
+        <meta property="og:title" content="🚨 ATENÇÃO: Monte Carmelo (06/02/2026)">
+    <meta property="og:description" content="URGENTE: Nova ocorrência registrada agora. Clique para ver os detalhes.">
+    <meta property="og:image" content="https://raw.githubusercontent.com/noticiasmonte/montecity/main/1770381381125.png">
     <meta property="og:url" content="https://nocitiasmonte.github.io/montecity/">
     <meta property="og:type" content="website">
 
