--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <meta property="og:title" content="🚨 ATENÇÃO: Monte Carmelo (06/02/2026)">
     <meta property="og:description" content="URGENTE: Nova ocorrência registrada agora. Clique para ver os detalhes.">
-    <meta property="og:image" content="https://raw.githubusercontent.com/noticiasmonte/montecity/main/1770381381125.png">
+    <meta property="og:image" content="https://raw.githubusercontent.com/noticiasmonte/montecity/refs/heads/main/Screenshot_20260206-104716%7E2.png">
     <meta property="og:image:type" content="image/png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
