--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <meta property="og:title" content="🚨 URGENTE: VEJA AQUI A FOTO DO SUSPEITO DO HOMICIDIO EM MONTE CARMELO 16/02/2026">
     <meta property="og:description" content="Imagens exclusivas do ocorrido no Sidônio Cardoso. Clique para ver os detalhes e a identificação.">
-    <meta property="og:image" content="https://raw.githubusercontent.com/noticiasmonte/montecity/main/homicidio_1602.png">
+    <meta property="og:image" content="https://raw.githubusercontent.com/noticiasmonte/montecity/refs/heads/main/Screenshot_20260216-175457%7E2.png">
     <meta property="og:image:type" content="image/png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
